Completed the assigment

--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,17 @@ repositories {
 dependencies {
 
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    
     // https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
     implementation 'io.github.bonigarcia:webdrivermanager:5.5.3'
 
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     implementation 'org.seleniumhq.selenium:selenium-java:4.14.0'
+
+    // https://mvnrepository.com/artifact/org.testng/testng
+    testImplementation 'org.testng:testng:7.10.1'
+
 
 }
 
@@ -37,5 +41,14 @@ dependencies {
 //run.dependsOn startScript
 
 //test.dependsOn startScript
+test{
+	useTestNG(){
+		suites 'src/test/resources/testng.xml'
+	}
+	testLogging{
+		showStandardStreams = true
+		events "passed", "skipped", "failed"
+	}
+}
 
 mainClassName = 'demo.App'
